Main pages overflow fixed

--- a/src/renderer/styles/_utilities.scss
+++ b/src/renderer/styles/_utilities.scss
@@ -104,3 +104,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+/* Display */
+.d-table-caption {
+  display: table-caption;
+}
